# Macronix_2024

./: README.md
Humanoid Robot Control/devel/: .catkin
Humanoid Robot Control/src/: talker.py
Humanoid Robot Control/src/Motor_Driver/src/: #example.cpp#  CMakeLists.txt  example.cpp  test.py
Humanoid Robot Control/src/Motor_Driver/src/MotorUnion/: MotorUnion.cpp  MotorUnion.h
Humanoid Robot Control/src/Motor_Driver/src/MotorUnion/Motor/: CMakeLists.txt  Motor.cpp  Motor.h  MotorMx.cpp  MotorPro.cpp  MotorPro.h  MotorProPlus.cpp  MotorXm.cpp  MotorXm.h
Humanoid Robot Control/src/Motor_Driver/src/MotorUnion/Motor/dynamixel/dynamixel_sdk/: group_bulk_read.cpp  group_bulk_write.cpp  packet_handler.h
Humanoid Robot Control/src/Motor_Driver/src/MotorUnion/Motor/motor/: motor.cpp  motor.h
Humanoid Robot Mechanism/: lower_body1.SLDASM
Humanoid Robot Mechanism/30_40_Hip/: 30_40_Hip.SLDASM  30_40_Hip_disk_YAS.SLDPRT  30_40_Hip_fixation_board.SLDPRT  H54P-100_M54P-040.SLDPRT  dinamixel-100 sub-turntabl.SLDPRT
Humanoid Robot Mechanism/Feet/: FRP42-I110K.SLDPRT  H42P-020-S300-R.SLDPRT  RMD-X8-S2-V3-Model.SLDPRT  ankle linkage.SLDPRT  ankle-linkage driver.SLDPRT  ankle-motor cushion.SLDPRT  bone connection bottom.SLDPRT  bone connection upward.SLDPRT  damper fixation left.SLDPRT  damper fixation right.SLDPRT  hip cushion.SLDPRT  hip-motor cushion.SLDPRT  knee cushion.SLDPRT  knee linkage.SLDPRT  knee-external fixation board.SLDPRT  knee-internal fixation board.SLDPRT  knee.SLDPRT  left foot.SLDASM  motor back.SLDPRT  motor front.SLDPRT  right foot.SLDASM  swxJRNL.swj  (+19 more)
(+225 files in other folders)
